<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bgd_gradient_light"
    android:id="@+id/fragment_track_pregnancy"
    tools:context=".controller.TrackPregnancyFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_on_pregnancy_day_number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        app:layout_constraintBottom_toTopOf="@id/pregnancyDay"/>

    <TextView
        android:id="@+id/pregnancyDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/baby"/>

    <Button
        android:id="@+id/baby"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_weight="1"
        android:text="@string/baby"
        android:background="@drawable/button_design"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/gallery"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/gallery"
        android:layout_width="0dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:text="@string/gallery"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/baby"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="62dp"
        app:srcCompat="@drawable/baby"
        tools:layout_editor_absoluteX="326dp"
        tools:layout_editor_absoluteY="328dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="61dp"
        android:layout_height="63dp"
        app:srcCompat="@drawable/reproduction"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="327dp" />


</android.support.constraint.ConstraintLayout>