<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgd_gradient_medium"
    android:id="@+id/fragment_new_pregnancy"
    tools:context=".controller.NewPregnancyFragment"
>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:typeface="monospace"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/info"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_day_last_period"
        android:typeface="monospace"
        android:textColor="@color/grey"
        android:textAlignment="center"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/calculateDueDate"/>

    <Button
        android:id="@+id/calculateDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:text="@string/calculate_due_date"
        android:typeface="monospace"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintBottom_toTopOf="@id/periodTitle"/>

    <TextView
        android:id="@+id/periodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:typeface="monospace"
        app:layout_constraintTop_toBottomOf="@id/calculateDueDate"
        app:layout_constraintBottom_toTopOf="@id/last"/>

    <TextView
        android:id="@+id/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:typeface="monospace"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/periodTitle"
        app:layout_constraintBottom_toTopOf="@id/dueDateTitle"/>


    <TextView
        android:id="@+id/dueDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:typeface="monospace"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last"
        app:layout_constraintBottom_toTopOf="@id/due"/>

    <TextView
        android:id="@+id/due"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:typeface="monospace"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dueDateTitle"
        app:layout_constraintBottom_toTopOf="@id/track"/>

    <Button
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:text="@string/track_pregnancy"
        android:typeface="monospace"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/due"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>